data/derived/fa15/progs/unify/prog3853.ml.out
Characters 48-49:
  let _ = pipe [(fun x -> x + 3);(fun x-> x + x)] 3;;
                                                  ^
Error: This expression has type int but an expression was expected of type
         (int -> int) -> int
